

add_subdirectory(SpiceCore)
add_subdirectory(SpiceLauncher)
add_subdirectory(SpiceOpenGL)
#add_subdirectory(SpiceRefl)

#add_subdirectory(SpiceSDLWindow)
#add_subdirectory(csfile)
#add_subdirectory(csrefl)
#add_subdirectory(graphicsgl4)
#add_subdirectory(physicsbullet)
#add_subdirectory(runner)
#add_subdirectory(windowsdl)
