


add_subdirectory(ceAssimpLoader)
add_subdirectory(ceBullet)
add_subdirectory(ceCore)
add_subdirectory(ceLauncher)
add_subdirectory(ceImgLoader)
add_subdirectory(ceOpenGL)
#add_subdirectory(SpiceRefl)

#add_subdirectory(SpiceSDLWindow)
#add_subdirectory(csfile)
#add_subdirectory(csrefl)
#add_subdirectory(graphicsgl4)
#add_subdirectory(physicsbullet)
#add_subdirectory(runner)
#add_subdirectory(windowsdl)
